Trying to create simple plugin based on scroller

--- a/config.html
+++ b/config.html
@@ -354,8 +354,9 @@
               <label class='field-label'>Simulate Time</label><br/>
               <input class="form-control" type="text" placeholder="DD.MM.YYYY HH:MM" v-model="time"/>
             </div>
+    
           </div>
-
+          Boggity Boo!
           <br/><br/><br/>
 
           <h3>Screen settings</h3>
