--- a/config.html
+++ b/config.html
@@ -354,9 +354,12 @@
     <label class='field-label'>Simulate Time</label><br/>
     <input class="form-control" type="text" placeholder="DD.MM.YYYY HH:MM" v-model="time"/>
     </div>
-    
-      </div>
-
+    </div>
+    <div class='row'>
+    <div class='col-xs-8'>
+    Testing!
+    </div>
+    </div>
     <br/><br/><br/>
 
     <h3>Screen settings</h3>
