Trying to create simple plugin based on scroller

--- a/config.html
+++ b/config.html
@@ -357,7 +357,7 @@
     </div>
     <div class='row'>
     <div class='col-xs-8'>
-    Testing!
+    <label class='field-label'>24 Hour or AM/PM</label>
     </div>
     </div>
     <br/><br/><br/>
