Trying to create simple plugin based on scroller

--- a/config.html
+++ b/config.html
@@ -356,7 +356,7 @@
 	    </div>	    
           </div>
 	  <div class='row'>
-	    testing
+	    <label class='field-label'>Testing</label><br/>
 	  </div>
 
           <br/><br/><br/>
