Trying to create simple plugin based on scroller

--- a/config.html
+++ b/config.html
@@ -356,7 +356,9 @@
 	    </div>	    
           </div>
 	  <div class='row'>
-	    <label class='field-label'>Testing</label><br/>
+            <div class='col-xs-8'>
+	      <label class='field-label'>Testing</label><br/>
+	    </div>
 	  </div>
 
           <br/><br/><br/>
