--- a/config.html
+++ b/config.html
@@ -351,20 +351,21 @@
 	      </select-dropdown>
 	    </div>
 
-<!--	    <div class='col-xs-3'> -->
+            <div class='col-xs-5'>
+              <label class='field-label'>Simulate Time</label><br/>
+              <input class="form-control" type="text" placeholder="DD.MM.YYYY HH:MM" v-model="time"/>
+            </div>
+          </div>
+          <div class='row'>
+	    <div class='col-xs-3'>
               <label class='field-label'>24 Hour or AM/PM</label>
               <select-dropdown
                 :selected="timeformat"
                 :values="timeformats"
                 @onSelected="onSetConfigValue('timeformat', $event)">
               </select-dropdown>
-<!--            </div> -->
-            <div class='col-xs-5'>
-              <label class='field-label'>Simulate Time</label><br/>
-              <input class="form-control" type="text" placeholder="DD.MM.YYYY HH:MM" v-model="time"/>
             </div>
-          </div>
-
+	  </div>
           <br/><br/><br/>
 
           <h3>Screen settings</h3>
