Try to add AM/PM field into config.html

--- a/config.html
+++ b/config.html
@@ -361,7 +361,7 @@
               <label class='field-label'>24 Hour or AM/PM</label>
               <select-dropdown
                 :selected="timeformat"
-                :values="timeformats"
+                :values="timezones"
                 @onSelected="onSetConfigValue('timeformat', $event)">
               </select-dropdown>
             </div>
