Try to add AM/PM field into config.html.  Debugging loop

--- a/config.html
+++ b/config.html
@@ -349,7 +349,7 @@
                 :values="timezones"
                 @onSelected="onSetConfigValue('timezone', $event)">
               </select-dropdown>
-              (transparent
+              (24 hour display
               <input
                 type='checkbox'
                 v-model="background_a">)
