Try to add AM/PM field into config.html.  Debugging loop

--- a/config.html
+++ b/config.html
@@ -352,7 +352,8 @@
               (24 hour display
               <input
                 type='checkbox'
-                v-model="background_a">)
+	       //                v-model="background_a">)
+	                       v-model="text">)
             </div>
             <div class='col-xs-4'>
               <label class='field-label'>Simulate Time</label><br/>
