Try to add AM/PM field into config.html.  Debugging loop

--- a/config.html
+++ b/config.html
@@ -351,8 +351,8 @@
               </select-dropdown>
               (24 hour display
               <input 
-                type='checkbox'>)>
-	       <!-- v-model="background_rgb">) -->
+                type='checkbox'
+	       v-model="background_rgb">)
 
             </div>
             <div class='col-xs-4'>
