--- a/config.html
+++ b/config.html
@@ -342,20 +342,25 @@
         <div v-if="tab == 'config'">
           <h3>Time settings</h3>
           <div class='row'>
-            <div class='col-xs-8'>
+            <div class='col-xs-4'>
               <label class='field-label'>Timezone</label><br/>
               <select-dropdown
                 :selected="timezone"
                 :values="timezones"
                 @onSelected="onSetConfigValue('timezone', $event)">
               </select-dropdown>
-              (24 hour display
-              <input 
-                type='checkbox'
-	       v-model="background_xyzzy">)
-
             </div>
-            <div class='col-xs-4'>
+	  <div class='col-xs-3'>
+	    <label class='field-label'>Time format</label>
+	    <br/>
+	    <select class='btn btn-default' v-model='time_fmt'>
+	      <option value='%a %H:%M'>Day 14:39</option>
+	      <option value='%a %I:%M %p'>Day 2:39 PM</option>
+	      <option value='%H:%M'>14:39</option>
+	      <option value='%I:%M %p'>2:39 PM</option>
+            </select>
+          </div>
+            <div class='col-xs-3'>
               <label class='field-label'>Simulate Time</label><br/>
               <input class="form-control" type="text" placeholder="DD.MM.YYYY HH:MM" v-model="time"/>
             </div>
